2012-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amdump_client.pl: Fix warning.

2012-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: add --decompress and --decrypt options.
	* man/xml-source/amfetchdump.8.xml: Document new options.

2012-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Parse MAX_WARNINGS in dumptype.
	* common-src/conffile.h: Add DUMPTYPE_MAX_WARNINGS and
	  dumptype_get_max_warnings
	* man/xml-source/amanda.conf.5.xml: Document max_warning in dumptype.
	* perl/Amanda/Config.swg: Add DUMPTYPE_MAX_WARNINGS.
	* server-src/diskfile.c (add_disk): Copy max_warnings from dumptype.
	* server-src/diskfile.h: Add max_warnings in disk_t.
	* server-src/driverio.c (dumper_cmd): Send max_warnings to dumper.
	* server-src/dumper.c: Use max_warnings.

2012-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: Remove useless g_source_is_destroyed check.

2012-04-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amgetconf.pl: Read the disklist.
	* common-src/conffile.h (seen_t): Add block.
	* common-src/conffile.c: Set seen.block
	* common-src/conffile.c (dump_configuration): New print_default and
	  print_source arguments.
	* installcheck/Amanda_Config.pl: Fix dump_configuration call.
	* server-src/amadmin.c: Add --no-default and --print-source arguments
	  for config and disklist command.
	* man/xml-source/amadmin.8.xml: Document new arguments.
	* perl/Amanda/Config.swg: Fix for new dump_configuration arguments.

2012-04-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Remove spurious space on directory entry.

2012-04-13  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add TMPDIR.
	* common-src/conffile.h: Add CNF_TMPDIR.
	* man/xml-source/amanda.conf.5.xml: Document TMPDIR.
	* perl/Amanda/Config.swg: Add CNF_TMPDIR.
	* server-src/amindexd.c: Use CNF_TMPDIR.
